Adds CSS for menu items

--- a/public/styles.css
+++ b/public/styles.css
@@ -32374,6 +32374,14 @@ video {
   padding-right: 0.625rem
 }
 
+.border-img {
+  --tw-border-opacity: 1;
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+  border-radius: 0.125rem;
+  border-style: solid;
+  border-width: 4px
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
