--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,12 @@
 .border {
   @apply border-solid border-2 border-white text-sm py-2 px-2.5 bg-white
 }
+
+.border-img {
+  @apply border-solid border-4 border-white rounded-sm
+}
+
+
+.meal-info {
+  @apply 
+}
