--- a/public/styles.css
+++ b/public/styles.css
@@ -32374,12 +32374,53 @@ video {
   padding-right: 0.625rem
 }
 
-.border-img {
+.meals {
+  display: grid;
+  margin-top: 1.25rem;
+  gap: 1.25rem;
+  grid-template-columns: repeat(4, minmax(0, 1fr))
+}
+
+.meal {
+  cursor: pointer;
+  height: 11rem;
+  position: relative;
+  text-align: center;
+  width: 11rem
+}
+
+.meal-img {
   --tw-border-opacity: 1;
   border-color: rgba(255, 255, 255, var(--tw-border-opacity));
   border-radius: 0.125rem;
   border-style: solid;
-  border-width: 4px
+  border-width: 4px;
+  height: 100%;
+  width: 100%
+}
+
+.meal-info {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  transition-duration: 200ms
+}
+
+.meal:hover .meal-info{
+  opacity: 1;
 }
 
 @media (min-width: 640px) {
