--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,22 @@
   @apply border-solid border-2 border-white text-sm py-2 px-2.5 bg-white
 }
 
-.border-img {
-  @apply border-solid border-4 border-white rounded-sm
+.meals {
+  @apply grid grid-cols-4	gap-5 mt-5
 }
 
+.meal {
+  @apply cursor-pointer relative h-44 w-44 text-center
+}
+
+.meal-img {
+  @apply  w-full h-full border-solid border-4 border-white rounded-sm 
+}
 
 .meal-info {
-  @apply 
+  @apply absolute top-0 left-0 h-full w-full bg-opacity-70 bg-black flex items-center justify-center transition-opacity duration-200 ease-in opacity-0
+}
+
+.meal:hover .meal-info{
+  opacity: 1;
 }
