--- a/src/styles.css
+++ b/src/styles.css
@@ -2,27 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .border {
-  @apply border-solid border-2 border-white text-sm py-2 px-2.5 bg-white
+  @apply border-solid border-2 border-white text-sm py-2 px-2.5 bg-white;
 }
 
 .meals {
-  @apply grid grid-cols-4	gap-5 mt-5
+  @apply grid grid-cols-4	gap-5 mt-5;
 }
 
 .meal {
-  @apply cursor-pointer relative h-44 w-44 text-center
+  @apply cursor-pointer relative h-44 w-44 text-center;
 }
 
 .meal-img {
-  @apply  w-full h-full border-solid border-4 border-white rounded-sm 
+  @apply w-full h-full border-solid border-4 border-white rounded-sm;
 }
 
 .meal-info {
-  @apply absolute top-0 left-0 h-full w-full bg-opacity-70 bg-black flex items-center justify-center transition-opacity duration-200 ease-in opacity-0
+  @apply absolute top-0 left-0 h-full w-full bg-opacity-70 bg-black flex items-center justify-center transition-opacity duration-200 ease-in opacity-0;
 }
 
-.meal:hover .meal-info{
+.meal:hover .meal-info {
   opacity: 1;
+}
+
+.single-meal-img {
+  @apply w-80 my-3.5 mx-auto border-4 border-white border-solid rounded-sm;
+}
+
+.single-meal-info {
+  @apply m-5 p-2.5 border-2 border-yellow-500 border-dashed rounded;
+}
+
+.single-meal-p {
+  @apply m-0 tracking-wide leading-normal;
+}
+
+.single-meal-ul {
+  @apply pl-0;
+}
+
+.single-meal-ul-li {
+  @apply border-2 border-solid border-gray-200 rounded bg-white inline-block text-gray-900 text-xs font-bold p-1 mt-0 mr-1 mb-1 ml-0;
 }
