--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,11 @@
 }
 
 .meals {
-  @apply grid grid-cols-4	gap-5 mt-5;
+  @apply grid grid-cols-1	gap-5 mt-5 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
 }
 
 .meal {
-  @apply cursor-pointer relative h-44 w-44 text-center;
+  @apply cursor-pointer relative h-72 w-72 sm:h-52 sm:w-52 lg:h-44 lg:w-44 text-center;
 }
 
 .meal-img {
